removed alt text from figcatption
edited link position
author description
updated posts
updated forestry

--- a/content/posts/01-01-2020 - CL#03.mdx
+++ b/content/posts/01-01-2020 - CL#03.mdx
@@ -2,7 +2,7 @@
 title: "Crença Limitante #3: Dinheiro não traz felicidade"
 cover: ../images/crenca3.png
 coverAlt: "Um homem velho e cabeludo na escuridão."
-description: "dd"
+description: "Dinheiro é uma ferramenta e ele vai proporcionar exatamente as intenções da pessoa que usa."
 datePublished: "2020-03-01"
 dateModified: "2020-03-01"
 category: "mentalidade"
@@ -12,35 +12,42 @@ tags:
   - crenças limitantes
 ---
 
-## Assim como armas não matam pessoas, dinheiro não é nada se ele não estiver nas mãos de ninguém.
+## Assim como armas não matam pessoas...
 
-Dinheiro é uma ferramenta e ele vai proporcionar exatamente as intenções da pessoa que usa. 
+**...dinheiro não é nada se ele não estiver nas mãos de ninguém.**
 
-Como tenho falado, nossas ações são resultados dos nossos pensamentos. 
-Se temos uma crença de que dinheiro não traz felicidade, agiremos conforme 
-nossos pensamentos (mesmo que de forma inconsciente).
+  
 
-A nossa situação de vida hoje é o resultado de todas as nossas ações e 
-escolhas que fizemos até o momento presente. Atenção! Nós estamos nessa situação, 
-seja ela positiva ou negativa, porque nós a criamos. 
+Dinheiro é uma ferramenta e ele vai proporcionar exatamente as intenções da pessoa que usa.
+
+  
+
+Como tenho falado, nossas ações são resultados dos nossos pensamentos. Se temos uma crença de que dinheiro não traz felicidade, agiremos conforme nossos pensamentos (mesmo que de forma inconsciente).
+
+  
+
+A nossa situação de vida hoje é o resultado de todas as nossas ações e escolhas que fizemos até o momento presente. Atenção! Nós estamos nessa situação, seja ela positiva ou negativa, porque nós a criamos.
+
+  
 
 ## DINHEIRO TRAZ FELICIDADE
 
-Se em vez de acreditar que dinheiro não traz felicidade, nós decidirmos acreditar 
-que dinheiro traz felicidade, os nossos pensamentos serão de acordo com essa nova crença. 
-Felicidade é um sentimento positivo. Nossas ações serão positivas e nossos 
-resultados serão conforme nossas ações, sentimentos e emoções.
+  
 
-Ou seja, crer que DINHEIRO TRAZ FELICIDADE, automaticamente nossa situação de vida se 
-desenrolará com mais felicidade. Aparecerão mais momentos de felicidade 
-quando o dinheiro está envolvido.
+Se em vez de acreditar que dinheiro não traz felicidade, nós decidirmos acreditar que dinheiro traz felicidade, os nossos pensamentos serão de acordo com essa nova crença. Felicidade é um sentimento positivo. Nossas ações serão positivas e nossos resultados serão conforme nossas ações, sentimentos e emoções.
 
-Por outro lado, crer que o dinheiro não traz felicidade, automaticamente nossa situação 
-de vida se desenrolará com mais desgraças. Aparecerão mais momentos de "azar" 
-e infelicidades quando o dinheiro está envolvido.
+  
 
-Deu para perceber que estamos a todo tempo criando a nossa própria 
-situação de vida e a nossa própria realidade?
+Ou seja, crer que DINHEIRO TRAZ FELICIDADE, automaticamente nossa situação de vida se desenrolará com mais felicidade. Aparecerão mais momentos de felicidade quando o dinheiro está envolvido.
 
-Sua ações frente ao dinheiro determinarão se dinheiro traz felicidade ou não. 
-E o que vai determinar suas ações? As suas crenças.
+  
+
+Por outro lado, crer que o dinheiro não traz felicidade, automaticamente nossa situação de vida se desenrolará com mais desgraças. Aparecerão mais momentos de "azar" e infelicidades quando o dinheiro está envolvido.
+
+  
+
+Deu para perceber que estamos a todo tempo criando a nossa própria situação de vida e a nossa própria realidade?
+
+  
+
+Sua ações frente ao dinheiro determinarão se dinheiro traz felicidade ou não. E o que vai determinar suas ações? As suas crenças.
