--- a/content/posts/01-01-2020 SGB#03.mdx
+++ b/content/posts/01-01-2020 SGB#03.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Taxas de Juros Abusivas - SGB#03"
 cover: ../images/sgb-03-cartões.jpg
-coverAlt: "dívidas"
-description: "dd"
+coverAlt: "vários cartões de créditos no bolso da calça"
+description: "O Brasil tem o 2º maior spread do mundo. Resultado de altas taxas ao cobrar juros e péssimas taxas ao pagar retornos de investimentos ao investido."
 datePublished: "2020-03-17"
 dateModified: "2021-03-17"
 category: "economia"
@@ -12,22 +12,17 @@ tags:
   - série SGB
 ---
 
-## O Brasil tem o 2º maior spread do mundo. Resultado de altas taxas ao cobrar juros e 
-## péssimas taxas ao pagar retornos de investimentos ao investido. 
+## O Brasil tem o 2º maior spread do mundo. 
 
+Resultado de altas taxas ao cobrar juros e péssimas taxas ao pagar retornos de investimentos ao investido.
 
-Hoje no feed de notícias do meu Instagram @diegoayres.oficial 
-eu postei um vídeo da tela do meu computador o qual falo e mostro passo a passo como você 
-pode verificar as taxas praticadas pelos Bancos aqui no Brasil.
+Hoje no feed de notícias do meu Instagram [@diegoayres.oficial](https://www.instagram.com/diegoayres.oficial/) eu postei um vídeo da tela do meu computador o qual falo e mostro passo a passo como você pode verificar as taxas praticadas pelos Bancos aqui no Brasil.
 
 Caso você não possa assistir o vídeo, vou deixar o caminho com apenas 4 passos aqui.
 
 ## O passo a passo é simples:
 
-1 - Entre no site do Banco Central (clique para abrir). https://www.bcb.gov/
-
-2 - Acesso no menu a opção Estatísticas. (o menu irá se expandir)
-
-3 - Escolha a opção Taxas de Juros.
-
-4 - Clique na modalidade de crédito você quer consultar.
+ 1. Entre no site do [Banco Central (clique para abrir).](https://www.bcb.gov/)
+ 2. Acesso no menu a opção Estatísticas. (o menu irá se expandir)
+ 3. Escolha a opção Taxas de Juros.
+ 4. Clique na modalidade de crédito você quer consultar.
