--- a/content/posts/01-01-2020 SGB#04.mdx
+++ b/content/posts/01-01-2020 SGB#04.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Você se sente assim? - SGB#04"
 cover: ../images/sgb-04-burocrata.jpg
-coverAlt: "Um burocrata"
-description: "dd"
+coverAlt: "Uma pessoa de terno sentado numa mesa de escritório"
+description: "Os bancos alegam que esses valores altos é devido a alta inadimplência e alto risco de calote porém especialistas afirmam que na realidade é a baixa concorrência no mercado bancário brasileiro."
 datePublished: "2020-03-22"
 dateModified: "2021-03-22"
 category: "economia"
@@ -12,48 +12,36 @@ tags:
   - série SGB
 ---
 
+
 ## Pressionado pelas altas taxas de juros e sem ter para onde correr?
 
-link fed https://www.federalreserve.gov/releases/lbr/current/default.htm
-link bacen http://www.bcb.gov.br/?RELINST
-Os bancos alegam que esses valores altos é devido a alta inadimplência e 
-alto risco de calote porém especialistas afirmam que na realidade é a 
-baixa concorrência no mercado bancário brasileiro.
+Os bancos alegam que esses valores altos é devido a alta inadimplência e alto risco de calote porém especialistas afirmam que na realidade é a baixa concorrência no mercado bancário brasileiro.
+  
 
-Para você ter noção, nos Estados Unidos existem 1.836 grandes 
-bancos listados no FED. Bastante né... nem contei o minoritários.
+Para você ter noção, nos [Estados Unidos existem 1.836 grandes bancos listados no FED](https://www.federalreserve.gov/releases/lbr/current/default.htm). Bastante né... nem contei o minoritários.
 
-Aaah... FED é Federal Reserve, é o Banco Central dos EUA.
+Aaah... FED é *Federal Reserve,* é o Banco Central dos EUA.
 
-Quando falamos em Grandes Bancos daqui do Brasil, nos vem na cabeça o 
-nome de apenas 5: o San, o It, o Bras, o Ca e o Brad.
+Quando falamos em Grandes Bancos daqui do Brasil, nos vem na cabeça o nome de apenas 5: o San, o It, o Bras, o Ca e o Brad.
 
-Mas fui lá no site do BACEN e pesquisei também a lista de bancos, 
-cooperativas de crédito, corretoras, instituições financeiras... 
-incluindo tudo isso, a lista ficou em apenas 247 no total. 
+Mas fui lá no site do [BACEN](http://www.bcb.gov.br/?RELINST) e pesquisei também a lista de bancos, cooperativas de crédito, corretoras, instituições financeiras...incluindo tudo isso, a lista ficou em apenas 247 no total.
 
-Agora ficou mais claro que a baixa concorrência permite que altas 
-taxas sejam praticadas. Mas ok, isso não está no nosso controle. 
+Agora ficou mais claro que a baixa concorrência permite que altas taxas sejam praticadas. Mas ok, isso não está no nosso controle.
 
-Se você quiser deprimir, siga dois passos: Foca no que não 
-depende de você e no que não está no seu controle. 
+  
+Se você quiser deprimir, siga dois passos: Foca no que não depende de você e no que não está no seu controle.
 
-Agora se você quer dar a volta por cima, vamos continuar conversando 
-aqui no blog ou lá pelo instagram @diegoayres.oficial. 
-Eu precisava te falar isso porque agora você está mais presente para o que está 
-acontecendo e não vai pensar duas vezes na hora de aplicar tudo o que eu 
-tenho para te revelar nos próximos dias.
+Agora se você quer dar a volta por cima, vamos continuar conversando aqui no blog ou lá pelo instagram [@diegoayres.oficial.](https://www.instagram.com/diegoayres.oficial/)
 
-Preparado? 
+Eu precisava te falar isso porque agora você está mais presente para o que está acontecendo e não vai pensar duas vezes na hora de aplicar tudo o que eu tenho para te revelar nos próximos dias.
+
+Preparado?
 
 Vamos lá.
 
 ## Siiim... tem mais uma coisa
+Outro motivo pelos quais os bancos continuam praticando essas taxas altíssimas somos nós mesmos. Nós aceitamos pagar e pagamos.
 
-Outro motivo pelos quais os bancos continuam praticando essas taxas 
-altíssimas somos nós mesmos. Nós aceitamos pagar e pagamos. 
 Mas existe algo chamado PDD e isso faz toda diferença nas tomadas de decisões.
 
-Falo disso mais pra frente ;)
-
-Se ficou curioso, se inscreva aqui em baixo e receba no seu e-mail um presente.
+Falarei disso mais pra frente ;)
