--- a/content/posts/o-bizu-para-juntar-dinheiro-mais-facil.mdx
+++ b/content/posts/o-bizu-para-juntar-dinheiro-mais-facil.mdx
@@ -3,8 +3,8 @@ tags:
 - planejamento
 - bizu
 - poupar
-dateModified: 2021-09-28 2:57 PM
-datePublished: 2021-09-28 2:57 PM
+dateModified: 2021-09-28
+datePublished: 2021-09-28
 title: O BIZU PARA JUNTAR DINHEIRO MAIS FÁCIL
 cover: "../images/combatente-rico-diego-ayres-finacas-para-militares-juntar-dinheiro.png"
 coverAlt: Infográfico com a técnica IMBEL para juntar dinheiro mais fácil
