--- a/content/posts/01-01-2020 - CL#05.mdx
+++ b/content/posts/01-01-2020 - CL#05.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Crença Limitante #5: Dinheiro é a Raiz de todos os males"
 cover: ../images/ss-em-arvore.png
-coverAlt: "Dinheiro caindo de uma árvore."
-description: "dd"
+coverAlt: "Ilustração simbólica de dinheiro caindo de uma árvore."
+description: "Por bastante tempo eu acreditei nisso sem perceber e nem questionar onde tinha aprendido."
 datePublished: "2020-04-05"
 dateModified: "2020-04-06"
 category: "mentalidade"
@@ -18,38 +18,38 @@ Se plantarmos o mal, teremos raízes más.
 
 Se plantarmos o bem, teremos ótimas raízes e excelentes frutos
 
-Por bastante tempo eu acreditei nisso sem perceber e nem questionar onde tinha aprendido. 
-Talvez eu tenha ouvido errado ou talvez a pessoa que me falou deve ter ouvido errado e só replicou esse ensinamento.
+Por bastante tempo eu acreditei nisso sem perceber e nem questionar onde tinha aprendido. Talvez eu tenha ouvido errado ou talvez a pessoa que me falou deve ter ouvido errado e só replicou esse ensinamento.
 
 Não sei quem foi nem como foi. Só sei que quando percebi eu pude questionar se isso era verdade ou não.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
-A frase na íntegra seria “o amor ao dinheiro é a raízes de todos os males”. 
-Aí entra aquela questão que a gente conversou dias atrás, que é sobre o “ter muito dinheiro não é espiritual”
+A frase na íntegra seria “o amor ao dinheiro é a raízes de todos os males”. Aí entra aquela questão que a gente conversou dias atrás, que é sobre o “ter muito dinheiro não é espiritual”
 
 ## Essa crença é tão sutil que é difícil de perceber.
 
 Você pode falar que não tem.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
+
 Eu duvido!
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
+
 Eu duvido mesmo!!!
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
+
 E sabe por que eu duvido?
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
-É para te forçar a refletir se você já pensou que se ganhar muito dinheiro 
-você vai ter que pagar mais imposto de renda, 
-vai ter mais dor de cabeça para ter que gerenciar tudo, 
-vai ter que lidar com parentes pedindo emprestado, 
-tem medo de ser assaltado e por aí vai...
+
+É para te forçar a refletir se você já pensou que se ganhar muito dinheiro você vai ter que pagar mais imposto de renda, vai ter mais dor de cabeça para ter que gerenciar tudo, vai ter que lidar com parentes pedindo emprestado, tem medo de ser assaltado e por aí vai...
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
 Não se apegue ao título da crença limitante mas sim o que ela pode representar em sua vida.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
-Na minha vida ela representava que eu teria mais dor de cabeça para gerenciar tanto dinheiro. 
-Afinal de contas, eu já não dava conta do eu tinha, eu era desorganizado.
+Na minha vida ela representava que eu teria mais dor de cabeça para gerenciar tanto dinheiro. Afinal de contas, eu já não dava conta do eu tinha, eu era desorganizado.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
 Não queria mais dor de cabeça.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
-Faz sentido? ⠀⠀⠀⠀⠀⠀⠀⠀⠀
+Faz sentido? ⠀⠀⠀
+
+⠀⠀⠀⠀⠀⠀
 Comente aí se você já ouviu alguém falando que “Dinheiro é a raiz de todos os males”.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀
+
 Vamos quebrar esse ciclo?
